finalizado home com descricao

--- a/index.html
+++ b/index.html
@@ -2,3 +2,5 @@
 <H1>Ola mundo</H1>
 <p>paragrafo da home</p>
 <h3>criando home no meu site</h3>
+<h3>sujeito programador</h3>
+<h3>bem vindo ao site</h3>
